--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -564,10 +564,10 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1.4;
-    font-size: 16px;
+    font-size: 28px;
     font-weight: 400;
-    font-family: "Open Sans", sans-serif;
-    color: #555;
+    font-family: "Helvetica" "Open Sans", sans-serif;
+    color: #black;
 }
 
 body.awe-skin-dark {
