--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,7 +39,7 @@
 
 /* 1. base
 --------------------------------------------------------------------------------*/
-
+    
 a[disabled], input[disabled], button[disabled], textarea[disabled] {
     cursor: not-allowed !important;
     opacity: .5 !important;
@@ -298,7 +298,7 @@ hr {
     text-align: center;
     font-size: 20px;
     padding: 10px 20px;
-    color: #000;
+    color: #lightseagreen;
     background-color: #eee;
     transition: all .3s ease;
     text-decoration: none;
@@ -2360,6 +2360,7 @@ ul {
 
 .footer__coppy {
     color: #a3a3a3;
+    font-size: 18px;
 }
 
 @media (min-width: 993px) {
