--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2000,7 +2000,7 @@ ul {
 
 .page-title__text {
     font-size: 24px;
-    color: lightseagreen;
+    color: darkgrey;
 }
 
 .page-title__divider {
