--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -566,7 +566,7 @@ body {
     line-height: 1.4;
     font-size: 24px;
     font-weight: 400;
-    font-family: "Helvetica", "Open Sans", sans-serif;
+    font-family: "Montserrat", "Open Sans", sans-serif;
     color: #black;
 }
 
